# imd-utils

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/: bin2imd.c  imda.c  imdchk.c  imdcmp.c  imdu.c  imdv.c
